--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,1 @@
-{ "$schema": "https://json.schemastore.org/package.json", 
-"private": true, 
-"type": "module", 
-"scripts":
- { "build": "vite build", 
- "dev": "vite" },
-  "devDependencies":
-   { "@tailwindcss/vite":  "^4.0.0", 
-   "axios": "^1.11.0", 
-   "concurrently": "^9.0.1", 
-   "laravel-vite-plugin": "^2.0.0", 
-   "tailwindcss": "^4.0.0", 
-   "vite": "^7.0.7" ,
-    "reactflow": "^11.11.4"
-   } 
-}
+{"$schema":"https://json.schemastore.org/package.json","private":true,"type":"module","scripts":{"build":"vite build","dev":"vite"},"devDependencies":{"@tailwindcss/vite":"^4.0.0","axios":"^1.11.0","concurrently":"^9.0.1","laravel-vite-plugin":"^2.0.0","reactflow":"^11.11.4","tailwindcss":"^4.0.0","vite":"^7.0.7"}}
